Add OCR/PKI/GDPR docs and test fixes
Update docs and infra/config to reflect implemented features and cleanups. Removed obsolete DPS.md and project_status.md; moved GOAL.md and requirements.md into notes/. Updated GUIDE example signature, and revised context docs (architecture, business_logic, database, memory) to document local Tess4j OCR, MRZ validation, X.509/BouncyCastle signing, Redis rate limiting, MinIO purge worker (GDPR) and other implementation details. Added notes/project_status.md summarizing project status. Enable ByteBuddy experimental flag for tests via maven-surefire-plugin argLine in pom.xml. Also simplified BiometricMatchingServiceTest by removing an unnecessary constructor.